--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -34,7 +34,7 @@
   color: #fff;
   text-align: center;
   padding-top: 2rem;
-  padding-top: 2rem;
+  padding-bottom: 2rem;
 
   @media screen and #{$desktop_media_query} {
     width: 100%;
@@ -77,6 +77,12 @@
 
   &.section--grey {
     background-color: #f2f2f2;
+  }
+
+  &.section--footer {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background-color: #0783c9;
   }
 }
 
@@ -143,4 +149,32 @@
       margin-left: -1em;
     }
   }
+}
+
+.footer-content {
+  display: flex;
+
+  @media screen and #{$mobile_media_query} {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @media screen and #{$desktop_media_query} {
+    justify-content: space-between;
+  }
+}
+
+.footer-links {
+  display: flex;
+  align-items: center;
+
+  @media screen and #{$mobile_media_query} {
+    margin-top: 2rem;
+  }
+}
+
+.social-link {
+  width: 3rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
